fix hover image stuck on screen

--- a/ui/main.css
+++ b/ui/main.css
@@ -7,6 +7,8 @@
     --main-color-text: white;
     --main-color-text-disabled: white;
     --animation-delay: 0.3s;
+
+    --icon-size: 1.2rem;
 }
 
 * {
@@ -184,6 +186,7 @@ input#search {
     text-align: left;
     color: rgb(255, 255, 255);
     background-color: #292f36;
+    width: 100%;
 }
 
 .searchbar {
@@ -330,8 +333,8 @@ input#searchDisabled {
     justify-content: left;
     padding-left: 0.3rem;
     padding-right: 0.6rem;
-    font-size: 1.25rem;
-    min-width: 2.1rem;
+    font-size: var(--icon-size);
+    min-width: 2.15rem;
 }
 
 .back {
@@ -383,7 +386,7 @@ input#searchDisabled {
 
 .column {
     width: 100%;
-    margin-left: 1rem;
+    margin-left: 0.2rem;
 }
 
 .row:nth-child(2) {
